--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ language: go
 
 go:
   - 1.3
+  - 1.4
   - 1.5.2
 
 before_install:
   - go get gopkg.in/check.v1
 
 script:
-  - go test -v ./...
+  - go test -v ./... -check.v
 
 notifications:
   email:
