--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: go
 
 go:
-  - 1.3
-  - 1.4
   - 1.5.2
 
 before_install:
   - go get gopkg.in/check.v1
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
 
 script:
-  - go test -v ./... -check.v
-
+  - ./.test-cover.sh
 notifications:
   email:
     - eduardo@niclabs.cl
